<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/agent_class_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    android:visibility="gone">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_half_margin"
        android:layout_marginTop="@dimen/activity_half_margin"
        android:text="@string/sign_up"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sign_up_text_size"
        android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_half_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/referral_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_referral_id"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_half_margin"
        android:text="@string/class_of_account"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_half_margin">

        <RadioButton
            android:id="@+id/discount_based_agent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/discount_based"/>

        <RadioButton
            android:id="@+id/commission_based_agent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commissioned_based"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_half_margin"
        android:text="@string/agree_to_terms_and_conditions"/>

    <CheckBox
        android:id="@+id/terms_and_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agent_is_aware"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/agent_class_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/white_button_selector"
            android:text="@string/back"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/submit_and_signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/blue_button_selector"
            android:text="@string/submit"
            android:textColor="@android:color/white"/>
    </RelativeLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_half_margin"
        android:max="100"
        android:progress="100"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hundred_percent"
        android:textColor="@color/colorAccent"/>

</LinearLayout>