<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/agent_type_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    android:visibility="gone">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_half_margin"
        android:layout_marginTop="@dimen/activity_half_margin"
        android:text="@string/sign_up"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sign_up_text_size"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_half_margin"
        android:text="@string/type_of_agent"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/activity_margin">

        <RadioButton
            android:id="@+id/individual_agent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/individual"/>

        <RadioButton
            android:id="@+id/business_agent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business"/>
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/agent_personal_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/white_button_selector"
            android:text="@string/log_in"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/agent_first_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/blue_button_selector"
            android:text="@string/button.next"
            android:textColor="@android:color/white"/>
    </RelativeLayout>

</LinearLayout>